@@ -10,6 +10,7 @@
 - added a check for existance of this.uri by @fenddigital
 - removed `.trim()` from the `String.parseComponet()` method
 - fixed cleaning design in the FlowStream
+- added a small support for Groups and Tabs into the FlowStream
 
 ========================
 0.0.49
